// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`entry > scanEntries > 'vite-native' 1`] = `
{
  "app": {
    "deps": [
      {
        "path": "pages/index/index",
        "type": "page",
      },
      {
        "path": "/components/navigation-bar/navigation-bar",
        "type": "component",
      },
      {
        "entry": "index.js",
        "name": "pack1",
        "pages": [
          "pages/cat",
          "pages/dog",
        ],
        "root": "packageA",
        "type": "subPackage",
      },
      {
        "entry": "index.ts",
        "independent": true,
        "name": "pack2",
        "pages": [
          "pages/apple",
          "pages/banana",
        ],
        "root": "packageB",
        "type": "subPackage",
      },
    ],
    "json": {
      "componentFramework": "glass-easel",
      "lazyCodeLoading": "requiredComponents",
      "pages": [
        "pages/index/index",
      ],
      "sitemapLocation": "sitemap.json",
      "subPackages": [
        {
          "entry": "index.js",
          "name": "pack1",
          "pages": [
            "pages/cat",
            "pages/dog",
          ],
          "root": "packageA",
        },
        {
          "entry": "index.ts",
          "independent": true,
          "name": "pack2",
          "pages": [
            "pages/apple",
            "pages/banana",
          ],
          "root": "packageB",
        },
      ],
      "usingComponents": {
        "navigation-bar": "/components/navigation-bar/navigation-bar",
      },
      "window": {
        "navigationBarBackgroundColor": "#ffffff",
        "navigationBarTextStyle": "black",
        "navigationBarTitleText": "Weixin",
      },
    },
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "json": {
        "component": true,
        "styleIsolation": "apply-shared",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/navigation-bar.json",
      "path": "components/navigation-bar/navigation-bar.ts",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [
        {
          "path": "tdesign-miniprogram/button/button",
          "type": "component",
        },
        {
          "path": "tdesign-miniprogram/divider/divider",
          "type": "component",
        },
      ],
      "json": {
        "usingComponents": {
          "t-button": "tdesign-miniprogram/button/button",
          "t-divider": "tdesign-miniprogram/divider/divider",
        },
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.ts",
      "type": "page",
    },
  ],
  "subPackages": [
    {
      "entry": "index.js",
      "name": "pack1",
      "pages": [
        "pages/cat",
        "pages/dog",
      ],
      "root": "packageA",
      "type": "subPackage",
    },
    {
      "entry": "index.ts",
      "independent": true,
      "name": "pack2",
      "pages": [
        "pages/apple",
        "pages/banana",
      ],
      "root": "packageB",
      "type": "subPackage",
    },
  ],
}
`;

exports[`entry > scanEntries > 'vite-native-skyline' 1`] = `
{
  "app": {
    "deps": [
      {
        "path": "pages/index/index",
        "type": "page",
      },
    ],
    "json": {
      "componentFramework": "glass-easel",
      "lazyCodeLoading": "requiredComponents",
      "pages": [
        "pages/index/index",
      ],
      "renderer": "skyline",
      "rendererOptions": {
        "skyline": {
          "defaultDisplayBlock": true,
          "disableABTest": true,
          "sdkVersionBegin": "3.0.0",
          "sdkVersionEnd": "15.255.255",
        },
      },
      "sitemapLocation": "sitemap.json",
      "style": "v2",
      "window": {
        "navigationBarTextStyle": "black",
        "navigationStyle": "custom",
      },
    },
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "json": {
        "component": true,
        "styleIsolation": "apply-shared",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/navigation-bar.json",
      "path": "components/navigation-bar/navigation-bar.js",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [
        {
          "path": "/components/navigation-bar/navigation-bar",
          "type": "component",
        },
      ],
      "json": {
        "usingComponents": {
          "navigation-bar": "/components/navigation-bar/navigation-bar",
        },
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.js",
      "type": "page",
    },
  ],
  "subPackages": [],
}
`;

exports[`entry > scanEntries > 'vite-native-ts' 1`] = `undefined`;

exports[`entry > scanEntries > 'vite-native-ts-skyline' 1`] = `undefined`;
